# Cubell-Gpu

./: .env.example  .gitignore  Dockerfile  README.md  dubbing_pipeline.py  pyproject.toml  requirements.txt  start_worker.sh
cubell/: __init__.py  gpu_worker.py
worker/: __init__.py  celery_app.py  config.py  db.py  storage.py  tasks.py
