[project]
name = "cubell-gpu-worker"
version = "0.1.0"
description = "GPU-ready Celery worker for Cubell dubbing jobs"
requires-python = ">=3.11,<3.12"
dependencies = [
    "boto3",
    "celery[redis]>=5.4.0",
    "psycopg[binary]>=3.2.1",
    "pydantic-settings>=2.5.2",
    "requests>=2.32.0",
    "sqlalchemy>=2.0.35",
]

[build-system]
requires = ["setuptools>=69", "wheel"]
build-backend = "setuptools.build_meta"

[tool.setuptools.packages.find]
include = ["cubell*", "worker*"]

[tool.setuptools]
py-modules = ["dubbing_pipeline"]
